hphp/hack/test/typecheck/autocomplete_sort_good.php.exp
File "autocomplete_sort_good.php", line 10, characters 28-28:
This attribute parameter should be static string literal (Typing[4127])
